// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfilePhotoGroup /> errors when a non-button is passed 1`] = `
"Warning: Failed prop type: \`ProfilePhotoGroup.children\` only accepts components matching the regular expression /(?:Tooltip|Permission|Trebuchet|ERF)|(?:ProfilePhoto)$/
    in ProfilePhotoGroup"
`;

exports[`<ProfilePhotoGroup /> handles components that return a falsy value 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-17"
    key="0"
  >
    <FakePhoto
      inline={false}
      key=".0"
      size={5}
      square={false}
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> handles photos that return falsy values 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-16"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders a remainder cell when the max is met 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-10"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell-0-2-2 inline-0-0-2-11"
    key="remainder"
  >
    <div
      className="remainder-0-2-3 inline-0-0-2-12"
    >
      <span
        className="remainderNumber-0-2-4"
      >
        +2
      </span>
    </div>
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders a single photo 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-9"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> renders photos 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-6"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell-0-2-2 inline-0-0-2-7"
    key="1"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell-0-2-2 inline-0-0-2-8"
    key="2"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".2"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;

exports[`<ProfilePhotoGroup /> supports custom sizes 1`] = `
<div
  className="group-0-2-1"
>
  <div
    className="cell-0-2-2 inline-0-0-2-13"
    key="0"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".0"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell-0-2-2 inline-0-0-2-14"
    key="1"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".1"
      size={5}
      square={false}
      title="Name"
    />
  </div>
  <div
    className="cell-0-2-2 inline-0-0-2-15"
    key="2"
  >
    <ProfilePhoto
      imageSrc="https://domain.com/some/file.jpg"
      inline={false}
      key=".2"
      size={5}
      square={false}
      title="Name"
    />
  </div>
</div>
`;
